packages/webassemblyjs/test/fixtures/type-errors/wrong-block-result/module.wast
(module 
  (func $func_0 (result i32)
    (block $block_0
      (f32.const 0)
    )
    (i32.eqz)
    (i32.const 0)
  )
)

